--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 h1 {
     color: rgba(150, 189, 185, 0.649);
     margin: 25px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Jura', Times, serif;
 }
 
 /* Styling for paragraph text */
