--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* General body styling */
 body {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     background-color: rgba(9, 54, 43, 0.2);
     margin: 20px;
     padding: 20px;
@@ -10,7 +10,7 @@ body {
 h1 {
     color: rgba(150, 189, 185, 0.649);
     margin: 25px;
-    font-family: Georgia, 'Jura', Times, serif;
+    font-family: Georgia, 'Arial', Times, serif;
 }
 
 /* Styling for paragraph text */
@@ -24,7 +24,7 @@ p {
 h2 {
     color: rgba(0, 0, 0, 0.442);
     text-align: left;
-    margin: 5px;
+    margin: 10px;
 }
 
 /* Header styling */
