--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     background-color: rgba(9, 54, 43, 0.2);
     margin: 20px;
     padding: 20px;
+    text-align: center;
 }
 
 /* Styling for the main heading */
